# ft_irc

./: .gitignore  CMakeLists.txt  Makefile
include/: Channel.hpp  Client.hpp  IRCServer.hpp  MessageParser.hpp  answer.hpp  debug.hpp
src/: Channel.cpp  Client.cpp  IRCServer.cpp  Makefile  MessageParser.cpp  client.cpp  client.hpp  main.cpp  server.cpp  server.hpp
